--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,8 @@
 		</section>
 		<footer id="info">
 			<p>Double-click to edit a todo</p>
-			<p>Written by <a href="https://github.com/addyosmani">Addy Osmani</a></p>
+			<p>Adapted by <a href="http://trou.pe">Troupe</a></p>
+			<p>Originally written by <a href="https://github.com/addyosmani">Addy Osmani</a></p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
 		<script type="text/template" id="item-template">
